force-app/main/default/objects/AML_Rules__mdt/AML_Rules__mdt.object-meta.xml
<CustomObject>
    <description>Custom metadata types to hold all the case related fields for an individual AML Rules.</description>
    <label>AML Rules</label>
    <pluralLabel>AML Rules</pluralLabel>
</CustomObject>