force-app/main/default/objects/AML_Rules__mdt/fields/AML_Decision_Flag__c.field-meta.xml
<CustomField>
    <fullName>AML_Decision_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <description>AML flag</description>
    <label>AML Decision Flag</label>
    <type>Checkbox</type>
</CustomField>