force-app/main/default/objects/AML_Rules__mdt/fields/Area__c.field-meta.xml
<CustomField>
    <fullName>Area__c</fullName>
    <label>Area</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Onboarding</fullName>
                <default>true</default>
                <label>Onboarding</label>
            </value>
            <value>
                <fullName>Deposit</fullName>
            </value>
            <value>
                <fullName>Withdrawal</fullName>
            </value>
            <value>
                <fullName>Deposit/Withdrawal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>