force-app/main/default/objects/AML_Rules__mdt/fields/Case_Conclusion__c.field-meta.xml
<CustomField>
    <fullName>Case_Conclusion__c</fullName>
    <label>Case Conclusion</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bank Statement Validated</fullName>
                <default>true</default>
                <label>Bank Statement Validated</label>
            </value>
            <value>
                <fullName>Customer Solved The Issue on Guidance From CS/Directed to Self-Help Resources</fullName>
            </value>
            <value>
                <fullName>Duplicate Case</fullName>
            </value>
            <value>
                <fullName>Feedback submitted for consideration</fullName>
            </value>
            <value>
                <fullName>Fund Deposit/Withdrawal/Transfer Query Answered</fullName>
            </value>
            <value>
                <fullName>Funds Returned</fullName>
            </value>
            <value>
                <fullName>Identity Verified Through Manual Cloudcheck</fullName>
            </value>
            <value>
                <fullName>Multiple Withdrawals</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Bank account name match has a high degree of confidence</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>