force-app/main/default/objects/AML_Rules__mdt/fields/Case_Owner_Id__c.field-meta.xml
<CustomField>
    <fullName>Case_Owner_Id__c</fullName>
    <label>Case Owner Id</label>
    <length>30</length>
    <type>Text</type>
</CustomField>