force-app/main/default/objects/AML_Rules__mdt/fields/Case_Reason__c.field-meta.xml
<CustomField>
    <fullName>Case_Reason__c</fullName>
    <description>Case reason dependent on case sub-category.</description>
    <label>Case Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Address Failure</fullName>
            </value>
            <value>
                <fullName>Date of Birth Failure</fullName>
            </value>
            <value>
                <fullName>Deposit</fullName>
            </value>
            <value>
                <fullName>Freeze</fullName>
            </value>
            <value>
                <fullName>FSCL Formal DRS Request (start of 10 working day time period to respond)</fullName>
            </value>
            <value>
                <fullName>Name, DoB and Address Failure</fullName>
            </value>
            <value>
                <fullName>Name and Address Failure</fullName>
            </value>
            <value>
                <fullName>Name Change - PEP Identified</fullName>
            </value>
            <value>
                <fullName>Name Failure</fullName>
            </value>
            <value>
                <fullName>No Driver’s License or Passport</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Registration</fullName>
            </value>
            <value>
                <fullName>Verification of Change not Required</fullName>
            </value>
            <value>
                <fullName>Verification of Change Required</fullName>
            </value>
            <value>
                <fullName>Watch</fullName>
            </value>
            <value>
                <fullName>Withdrawal</fullName>
            </value>
            <value>
                <fullName>Address verification failure</fullName>
            </value>
            <value>
                <fullName>Identity Verification Failure (3 attempts)</fullName>
            </value>
            <value>
                <fullName>Address verification failure (This address is correct)</fullName>
            </value>
            <value>
                <fullName>Address Verification Failure (3 attempts)</fullName>
            </value>
            <value>
                <fullName>Auto Refund</fullName>
            </value>
            <value>
                <fullName>Account Closure</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>