force-app/main/default/objects/AML_Rules__mdt/fields/Case_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>Case_Record_Type__c</fullName>
    <label>Case Record Type</label>
    <length>30</length>
    <type>Text</type>
</CustomField>