force-app/main/default/objects/AML_Rules__mdt/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <description>Case category</description>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Funds Inquiry</fullName>
            </value>
            <value>
                <fullName>Manual Validation of Bank Account</fullName>
            </value>
            <value>
                <fullName>Email Verification Code</fullName>
            </value>
            <value>
                <fullName>Cloudcheck</fullName>
            </value>
            <value>
                <fullName>AML Rule Breached at Registration</fullName>
            </value>
            <value>
                <fullName>AML Rule Breached at Deposit</fullName>
            </value>
            <value>
                <fullName>Personal Followup on Customers That Have not Deposited Recently</fullName>
            </value>
            <value>
                <fullName>Customer Feedback</fullName>
            </value>
            <value>
                <fullName>Watch/Freeze Request of Customer Account</fullName>
            </value>
            <value>
                <fullName>Customer Complaint - direct from customer</fullName>
            </value>
            <value>
                <fullName>Customer Complaint - via FSCL (Forwarded by FSCL, Not a formal DRS request)</fullName>
            </value>
            <value>
                <fullName>Request to Change Personally Identifiable Information</fullName>
            </value>
            <value>
                <fullName>Technical Support</fullName>
            </value>
            <value>
                <fullName>AML Rule Breached at Withdrawal</fullName>
            </value>
            <value>
                <fullName>No match on app bank account name</fullName>
            </value>
            <value>
                <fullName>Change in Beneficial Owner</fullName>
            </value>
            <value>
                <fullName>Transactions</fullName>
            </value>
            <value>
                <fullName>General Support</fullName>
            </value>
            <value>
                <fullName>Investment-related</fullName>
            </value>
            <value>
                <fullName>Manual verification of bank statement</fullName>
                <isActive>false</isActive>
                <label>Manual verification of bank statement</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>