force-app/main/default/objects/AML_Rules__mdt/fields/Escalated_to_FB__c.field-meta.xml
<CustomField>
    <fullName>Escalated_to_FB__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Shows that case is escalated to FB case team or not.</description>
    <label>Escalated to FB</label>
    <type>Checkbox</type>
</CustomField>