force-app/main/default/objects/AML_Rules__mdt/fields/First_Deposit_Held__c.field-meta.xml
<CustomField>
    <fullName>First_Deposit_Held__c</fullName>
    <defaultValue>false</defaultValue>
    <description>automatically checked in rule id d7.</description>
    <label>First Deposit Held</label>
    <type>Checkbox</type>
</CustomField>