force-app/main/default/objects/AML_Rules__mdt/fields/Locked__c.field-meta.xml
<CustomField>
    <fullName>Locked__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Use this field value to update account record.</description>
    <label>Locked</label>
    <type>Checkbox</type>
</CustomField>