force-app/main/default/objects/AML_Rules__mdt/fields/Sub_Category__c.field-meta.xml
<CustomField>
    <fullName>Sub_Category__c</fullName>
    <description>Sub Category of the case.</description>
    <label>Sub Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>$100k or more deposit</fullName>
            </value>
            <value>
                <fullName>$2k or more deposit per week over 8-weeks</fullName>
            </value>
            <value>
                <fullName>2 or more weekly withdrawals totalling $1k or more/4 weeks</fullName>
            </value>
            <value>
                <fullName>2 or more withdrawals of $10k or more/4 weeks</fullName>
            </value>
            <value>
                <fullName>5 deposits or more/4 weeks totalling $1k or more</fullName>
            </value>
            <value>
                <fullName>Account could not be automatically validated</fullName>
            </value>
            <value>
                <fullName>App Error - customer cannot use it</fullName>
                <default>true</default>
                <label>App Error - customer cannot use it</label>
            </value>
            <value>
                <fullName>App Error - customer cannot use some functions</fullName>
            </value>
            <value>
                <fullName>App Functionality</fullName>
            </value>
            <value>
                <fullName>App Password Issue</fullName>
            </value>
            <value>
                <fullName>App Usability</fullName>
            </value>
            <value>
                <fullName>Bank Account Number</fullName>
            </value>
            <value>
                <fullName>Cel Number</fullName>
            </value>
            <value>
                <fullName>Deposit - from non-registered bank account or incorrect Wallet reference number used, funds returned</fullName>
            </value>
            <value>
                <fullName>Deposit over 9999.99</fullName>
            </value>
            <value>
                <fullName>Deposits</fullName>
            </value>
            <value>
                <fullName>Email Address</fullName>
            </value>
            <value>
                <fullName>Feature Request</fullName>
            </value>
            <value>
                <fullName>Finance Investigation Unit (Police)</fullName>
            </value>
            <value>
                <fullName>Financial Markets Authority</fullName>
            </value>
            <value>
                <fullName>First Deposit Held</fullName>
            </value>
            <value>
                <fullName>ForsythBarr</fullName>
            </value>
            <value>
                <fullName>Freeze Customer Account</fullName>
            </value>
            <value>
                <fullName>Funds Haven&apos;t Arrived in Customer&apos;s Account</fullName>
            </value>
            <value>
                <fullName>Goals Achievement</fullName>
            </value>
            <value>
                <fullName>IRD Number</fullName>
            </value>
            <value>
                <fullName>Manual Opt out of Trove</fullName>
            </value>
            <value>
                <fullName>Manual Verification of Customer&apos;s Email</fullName>
            </value>
            <value>
                <fullName>Deposits totalling $100k or more/26 weeks</fullName>
            </value>
            <value>
                <fullName>Name</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>