force-app/main/default/objects/AML_Rules__mdt/fields/Team_Assignment__c.field-meta.xml
<CustomField>
    <fullName>Team_Assignment__c</fullName>
    <description>This pick list field represents the list of case teams.</description>
    <label>Team Assignment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Data</fullName>
                <default>true</default>
                <label>Data</label>
            </value>
            <value>
                <fullName>CRM</fullName>
            </value>
            <value>
                <fullName>Customer Experience</fullName>
            </value>
            <value>
                <fullName>Customer Support</fullName>
            </value>
            <value>
                <fullName>SLT</fullName>
            </value>
            <value>
                <fullName>FB Compliance</fullName>
            </value>
            <value>
                <fullName>On Call Eng (Low, Medium, High)</fullName>
            </value>
            <value>
                <fullName>On Call Eng (URGENT)</fullName>
            </value>
            <value>
                <fullName>Cloud Engineering</fullName>
                <isActive>false</isActive>
                <label>Cloud Engineering</label>
            </value>
            <value>
                <fullName>Front End</fullName>
                <isActive>false</isActive>
                <label>Front End</label>
            </value>
            <value>
                <fullName>Platform</fullName>
                <isActive>false</isActive>
                <label>Platform</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>